removed dashed section breaks

--- a/PA1.html
+++ b/PA1.html
@@ -219,7 +219,7 @@ hr {
 
 <h2>The Data</h2>
 
-<p>The original data set was downloaded from Coursera&#39;s Reproducible Research class web site on February 03, 2015. Measurements were taken from a personal activity device worn by an anonymous individual whose activities were recorded for two months from October to November of 2012. The downloaded data set conists of the number of steps taken by the individual in each five-minute interval for each day during that two-month period.<br/>
+<p>The original data set was downloaded from Coursera&#39;s Reproducible Research class web site on February 03, 2015 and is contained in the activity.zip file which can be found in this repository. Measurements were taken from a personal activity device worn by an anonymous individual whose activities were recorded for two months from October to November of 2012. The downloaded data set conists of the number of steps taken by the individual in each five-minute interval for each day during that two-month period.<br/>
 &nbsp;&nbsp;
 &nbsp;&nbsp;<br/>
 The variables in this data set are:</p>
